fix: cover on mobile

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -653,6 +653,7 @@
         height: auto;
         min-height: 24em;
         padding: 40px 20px;
+        background-size: auto;
 
         &__title {
             font-size: 48px;
